--- a/src/Pokemon Iluminati/Pokemon Iluminati.cbp
+++ b/src/Pokemon Iluminati/Pokemon Iluminati.cbp
@@ -5,13 +5,14 @@
 		<Option title="Pokemon Iluminati" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
-		<Option virtualFolders="Engine/;Engine/SceneManager/;Engine/ResourceManager/;Engine/RenderManager/;Engine/SceneManager/World/;Engine/SceneManager/Batle/;Engine/SceneManager/TestScene/;" />
+		<Option virtualFolders="Engine\;Engine\SceneManager\;Engine\ResourceManager\;Engine\RenderManager\;Engine\SceneManager\World\;Engine\SceneManager\Batle\;Engine\SceneManager\TestScene\;" />
 		<Build>
 			<Target title="Windows">
 				<Option output="bin/Pokemon Iluminati" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/" />
-				<Option type="0" />
+				<Option type="1" />
 				<Option compiler="gcc" />
+				<Option use_console_runner="0" />
 				<Compiler>
 					<Add option="-O2" />
 					<Add option="-std=c++11" />
